# egui_plot

./: Cargo.toml  Cargo.toml_org  recipe.json  rust-toolchain
.cspell/: custom-dictionary-workspace.txt
demo/: Cargo copy.toml  Cargo.toml  project_path.md  recipe.json
egui_plot/: Cargo.toml
examples/: time.log.txt
examples/borrow_points/: Cargo.toml
examples/custom_plot_manipulation/: Cargo.toml
examples/legend_sort/: Cargo.toml
examples/save_plot/: Cargo.toml  recipe.json
examples/save_plot/src/: main.rs
