[workspace]
members = ["egui_plot", "demo", "examples/*"]
resolver = "2"

[workspace.dependencies]
document-features = "0.2.10"
log = "0.4"
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"

[workspace.dependencies.ahash]
version = "0.8.11"
features = ["no-rng", "std"]
default-features = false

[workspace.dependencies.eframe]
version = "0.32"
default-features = false

[workspace.dependencies.egui]
version = "0.32"
default-features = false

[workspace.dependencies.egui_kittest]
version = "0.32"
default-features = false

[workspace.dependencies.egui_plot]
version = "0.0.1"
path = "egui_plot"
default-features = false

[workspace.dependencies.emath]
version = "0.32"
default-features = false

[workspace.dependencies.env_logger]
version = "0.11.6"
features = ["auto-color", "humantime"]
default-features = false

[workspace.dependencies.image]
version = "0.25"
default-features = false

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.package]
edition = "2024"
version = "0.0.1"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[patch.crates-io]

[profile.release]
opt-level = 2

[profile.release.package]

[profile.dev.package."*"]
opt-level = 2
