[package]
name = "egui_plot"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>", "Jan Haller <bromeon@gmail.com>", "Sven Niederberger <s-niederberger@outlook.com>"]
description = "Immediate mode plotting for the egui GUI library"
homepage = "https://github.com/emilk/egui_plot"
readme = "../README.md"
keywords = ["egui", "plot", "plotting"]
categories = ["visualization", "gui"]
repository = "https://github.com/emilk/egui_plot"
include = ["../LICENSE-APACHE", "../LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[package.edition]
workspace = true

[package.version]
workspace = true

[package.license]
workspace = true

[package.metadata.docs.rs]
all-features = true

[package.rust-version]
workspace = true

[dependencies.ahash]
workspace = true

[dependencies.document-features]
workspace = true
optional = true

[dependencies.egui]
workspace = true

[dependencies.emath]
workspace = true

[dependencies.serde]
workspace = true
optional = true

[features]
default = []
serde = ["dep:serde", "egui/serde"]

[lib]
path = "src/lib.rs"
name = "egui_plot"
plugin = false
proc-macro = false
required-features = []
crate-type = ["lib"]
