[package]
name = "borrow_points"
version = "0.0.1"
authors = ["Nicolas <bircni@icloud.com>"]
publish = false

[package.edition]
workspace = true

[package.license]
workspace = true

[package.rust-version]
workspace = true

[dependencies.eframe]
workspace = true
features = ["default"]

[dependencies.egui_plot]
workspace = true

[dependencies.env_logger]
workspace = true
features = ["auto-color", "humantime"]

[[bin]]
path = "src/main.rs"
name = "borrow_points"
plugin = false
proc-macro = false
required-features = []
