[package]
name = "custom_plot_manipulation"
version = "0.0.1"
authors = ["Ygor Souza <ygor.souza@protonmail.com>"]
publish = false

[package.edition]
workspace = true

[package.license]
workspace = true

[package.rust-version]
workspace = true

[dependencies.eframe]
workspace = true
features = ["default"]

[dependencies.egui_plot]
workspace = true

[dependencies.env_logger]
workspace = true
features = ["auto-color", "humantime"]

[[bin]]
path = "src/main.rs"
name = "custom_plot_manipulation"
plugin = false
proc-macro = false
required-features = []
