[package]
name = "legend_sort"
version = "0.0.1"
authors = ["hacknus <l_stoeckli@bluewin.ch>"]
publish = false

[package.edition]
workspace = true

[package.license]
workspace = true

[package.rust-version]
workspace = true

[dependencies.eframe]
workspace = true
features = ["default"]

[dependencies.egui_plot]
workspace = true

[dependencies.env_logger]
workspace = true
features = ["auto-color", "humantime"]

[[bin]]
path = "src/main.rs"
name = "legend_sort"
plugin = false
proc-macro = false
required-features = []
