[package]
name = "save_plot"
version = "0.0.1"
authors = ["hacknus <l_stoeckli@bluewin.ch>"]
publish = false

[package.edition]
workspace = true

[package.license]
workspace = true

[package.rust-version]
workspace = true

[dependencies]
rfd = "0.15.1"
sccache = "0.10.0"

[dependencies.eframe]
workspace = true
features = ["default"]

[dependencies.egui_plot]
workspace = true

[dependencies.env_logger]
workspace = true
features = ["auto-color", "humantime"]

[dependencies.image]
workspace = true
features = ["png"]

[[bin]]
path = "src/main.rs"
name = "save_plot"
plugin = false
proc-macro = false
required-features = []
